# em-jan-cafe

./: .env.example  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cafe_manager/: manage.py  pytest.ini
cafe_manager/cafe_manager/: asgi.py  settings.py  urls.py  wsgi.py
cafe_manager/orders/: models.py  services.py  urls.py  utils.py  views.py
cafe_manager/orders/api/: renderers.py  serializers.py  swagger_schemas.py  urls.py  views.py
cafe_manager/orders/fixtures/: example_dishes.json
cafe_manager/orders/migrations/: 0001_initial.py  0002_remove_order_created_at.py  0003_order_orders_order_status_valid.py  0004_dish_remove_order_items_orderdish_order_dishes.py  0005_remove_dish_amount.py
cafe_manager/orders/services/: order_service.py
cafe_manager/orders/templates/: base.html  order_create.html  order_edit.html  order_form.html  order_list.html  profit.html
cafe_manager/orders/tests/: conftest.py  test_api.py  test_models.py  test_services.py
cafe_manager/orders/web/: __init__.py  api.py  views.py
cafe_manager/orders/web/api/: serializers.py  urls.py  views.py
cafe_manager/orders/web/interface/: urls.py  views.py
cafe_manager/static/css/: styles.css
