[tool.poetry]
name = "em-jan-cafe"
version = "0.1.0"
description = "EM january test task"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
